Added js for displaying

--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ textarea{
 
 .description{
   white-space: pre-wrap;
+  flex: 5;
 }
 
 .time-block{
@@ -33,13 +34,14 @@ textarea{
 .row {
   white-space: pre-wrap;
   height: 80px;
-  border-top: 1px solid white;;
+  border-top: 1px solid white'
 }
 
 .hour {
   background-color: #ffffff;
   color: #000000;
   border-top: 1px dashed #000000;
+  flex: 0.75;
 }
 
 .past {
@@ -63,6 +65,7 @@ textarea{
   border-bottom-right-radius: 15px;
   background-color: #06AED5;
   color: white;
+  flex: 0.3;
 }
 
 .saveBtn i:hover {
