--- a/style.css
+++ b/style.css
@@ -2,14 +2,13 @@ body {
   font-family: 'Open Sans', sans-serif;
   font-size: 16px;
   line-height: 1;
+ 
 }
 
 textarea{
   background: transparent;
-  border: none;
   resize: none;
   color: #000000;
-  border-left: 1px solid black;
   padding: 10px;
 }
 
@@ -34,7 +33,7 @@ textarea{
 .row {
   white-space: pre-wrap;
   height: 80px;
-  border-top: 1px solid white'
+  border-top: 1px solid white;
 }
 
 .hour {
@@ -42,6 +41,9 @@ textarea{
   color: #000000;
   border-top: 1px dashed #000000;
   flex: 0.75;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .past {
